; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_git_config_rename.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_git_config_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIFF_DETECT_RENAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"copies\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"copy\00", align 1
@DIFF_DETECT_COPY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_rename(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* @DIFF_DETECT_RENAME, align 4
  store i32 %9, i32* %3, align 4
  br label %30

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strcasecmp(i8* %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @strcasecmp(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %14, %10
  %19 = load i32, i32* @DIFF_DETECT_COPY, align 4
  store i32 %19, i32* %3, align 4
  br label %30

20:                                               ; preds = %14
  %21 = load i8*, i8** %4, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i64 @git_config_bool(i8* %21, i8* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @DIFF_DETECT_RENAME, align 4
  br label %28

27:                                               ; preds = %20
  br label %28

28:                                               ; preds = %27, %25
  %29 = phi i32 [ %26, %25 ], [ 0, %27 ]
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %28, %18, %8
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i64 @git_config_bool(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
